--- a/package.json
+++ b/package.json
@@ -1,27 +1,26 @@
 {
   "name": "allons-y-express",
-  "version": "0.1.0",
-  "description": "",
-  "main": "index.js",
+  "version": "1.0.0",
+  "description": "Create express servers in the allons-y way.",
+  "license": "MIT",
+  "homepage": "http://allons-y.io",
+  "author": "CodeCorico <hello@codecorico.com>",
+  "bugs": "https://github.com/CodeCorico/allons-y-express/issues",
   "repository": {
     "type": "git",
     "url": "https://github.com/CodeCorico/allons-y-express.git"
-  },
-  "author": "CodeCorico <hello@codecorico.com>",
-  "bugs": {
-    "url": "https://github.com/CodeCorico/allons-y-express/issues"
-  },
-  "homepage": "https://github.com/CodeCorico/allons-y-express",
-  "dependencies": {
-    "async": "^2.0.1",
-    "body-parser": "^1.15.2",
-    "compression": "^1.6.2",
-    "cookie-parser": "^1.4.3",
-    "express": "^4.14.0"
   },
   "engines": {
     "node": ">=4.1",
     "npm": ">=3.2"
   },
-  "license": "MIT"
+  "dependencies": {
+    "allons-y": "^1.0.0",
+    "allons-y-dotenv": "^1.0.0",
+    "async": "^2.0.1",
+    "body-parser": "^1.15.2",
+    "compression": "^1.6.2",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.14.0"
+  }
 }
